[package]
name = "natural_lang"
version = "0.1.0"
authors = ["knknkn1162 <knknkn1162@gmail.com>"]

[dependencies]
rand = "0.3"
log = "0.*"
env_logger = "0.*"
getopts = "0.*"
glob = "0.2"
csv = "1.0.0-beta.5"
serde = "1"
serde_derive="1"
chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }
reqwest = "0.*"
